--- a/example_top_dataset.ipynb
+++ b/example_top_dataset.ipynb
@@ -88,7 +88,7 @@
     "import h5py\n",
     "import pandas as pd\n",
     "import sklearn as sk\n",
-    "import torch\n",
+    "import torch\n"
    ]
   },
   {
